--- a/files/common,login,zhtml,skin.css
+++ b/files/common,login,zhtml,skin.css
@@ -632,7 +632,7 @@ BODY{margin:0;}
 .ErrorScreen .decor1{display:none;}
 .ErrorScreen .decor2{display:none;}
 .center-small .ImgLoginBanner,.ImgAppBanner{background-repeat:no-repeat;background-position:left center;background-image:url(/skins/_base/logos/AppBanner_white.png?v=230516040634);width:200px;height:35px;}
-.ImgLoginBanner{background-repeat:no-repeat;background-position:bottom left;background-image:url(/home/rone/Downloads/al/al/LoginBanner_white.png?v=230516040634);width:440px;height:60px;}
+.ImgLoginBanner{background-repeat:no-repeat;background-position:bottom left;background-image:url(files/LoginBanner_white.png?v=230516040634);width:440px;height:60px;}
 .console_inset_app_l .HSashThumb{margin-left:-2px;}
 .UserInfoLink{width:100%;text-align:left;white-space:nowrap;}
 .ZmPicker .ZToolbar{padding-top:1px;border-bottom:1px solid #797979;background-color:#737373;}
